syntax = "proto3";

package plan.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/protos/deployments/generated/types/plan/v1";

message Metadata {
  string org_id = 1 [
    (validate.rules).string.uuid = true,
    (tagger.tags) = "faker:\"uuid_hyphenated\""
  ];
  string org_short_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];
  string app_id = 3 [
    (validate.rules).string.uuid = true,
    (tagger.tags) = "faker:\"uuid_hyphenated\""
  ];
  string app_short_id = 4 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];
}

// PlanRef contains the information needed to access a plan
message PlanRef {
  string bucket = 1 [
    (validate.rules).string.min_len = 1,
    (tagger.tags) = "faker:\"len=10\""
  ];

  string bucket_key = 2 [(validate.rules).string.min_bytes = 1];

  string bucket_assume_role_arn = 3 [
    (validate.rules).string.min_len = 20,
    (tagger.tags) = "faker:\"len=25\""
  ];
}

// WaypointServerRef represents the waypoint server that should be used
message WaypointServerRef {
  string address = 1 [(validate.rules).string.min_bytes = 1];

  string token_secret_name = 2 [(validate.rules).string.min_bytes = 1];
  string token_secret_namespace = 3 [(validate.rules).string.min_bytes = 1];
}
